--- a/Exercicios_de_Aula/package.json
+++ b/Exercicios_de_Aula/package.json
@@ -2,10 +2,11 @@
   "name": "sysmap",
   "version": "1.0.0",
   "description": "",
-  "main": "express-server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon express-server.js"
+    "start": "node ./index.js"
+
   },
   "author": "",
   "license": "ISC",
