--- a/Exercicios_de_Aula/Rest + Postgres/package.json
+++ b/Exercicios_de_Aula/Rest + Postgres/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "sysmap",
+  "name": "Rest + Postgres",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js",
-    "dev": "nodemon index.js"
-
+    "start": "nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
