--- a/FrontEnd/Web/package.json
+++ b/FrontEnd/Web/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.1",
+    "clsx": "^1.2.1",
+    "primeflex": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
