--- a/BackEnd/api/package.json
+++ b/BackEnd/api/package.json
@@ -1,50 +1,38 @@
 {
-  "name": "mvc",
+  "name": "api-upload",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "mongo:start": "docker run -d -p 27017:27017 mongo:latest",
-    "start": "nodemon .",
-    "test": "jest"
+  "directories": {
+    "lib": "lib"
   },
-  "keywords": [],
+  "scripts": {
+    "mongo:start": "doker run --name mongodb -d -p 27017:27017 mongo:latest",
+    "mongo:rm": "docker rm -f mongodb",
+    "mongo:seed": "node seed.js",
+    "mongo:rs": "npm run mongo:rm && npm run mongo:start && npm run mongo:seed",
+    "start": "nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "@aws-sdk/client-s3": "^3.135.0",
+    "@aws-sdk/s3-request-presigner": "^3.135.0",
+    "amqplib": "^0.10.0",
+    "aws-sdk": "^2.1180.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "docker": "^1.0.0",
-    "docker-compose": "^0.23.17",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "helmet": "^6.0.1",
+    "express": "^4.18.1",
+    "express-swagger-generator": "^1.1.17",
+    "helmet": "^5.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^6.3.3",
+    "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
-    "standard": "^17.0.0",
-    "swagger": "^0.0.1",
-    "swagger-ui": "^4.15.5",
-    "swagger-ui-express": "^4.6.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.19.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "express-swagger-generator": "^1.1.17",
-    "jest": "^28.1.0",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.2.3"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "rascal": "^14.4.5",
+    "socket.io": "^4.5.1"
   }
 }
