--- a/BackEnd/api/package.json
+++ b/BackEnd/api/package.json
@@ -22,6 +22,7 @@
     "amqplib": "^0.10.0",
     "aws-sdk": "^2.1180.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-swagger-generator": "^1.1.17",
