--- a/FrontEnd/Web/package.json
+++ b/FrontEnd/Web/package.json
@@ -18,6 +18,7 @@
     "primeflex": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
