--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -16,9 +16,9 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.1",
     "expo": "~47.0.9",
     "expo-asset": "~8.7.0",
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
     "expo-web-browser": "~12.0.0",
+    "jwt-decode": "^3.1.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
