--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -15,18 +15,18 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^0.16.19",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "axios": "^1.2.1",
-    "expo": "~47.0.9",
-    "expo-asset": "~8.7.0",
-    "expo-constants": "~14.0.2",
+    "expo": "^46.0.19",
+    "expo-asset": "^8.6.0",
+    "expo-constants": "^9.3.4",
     "expo-font": "~11.0.1",
-    "expo-linking": "~3.3.0",
+    "expo-linking": "^2.0.1",
     "expo-secure-store": "^12.0.0",
-    "expo-splash-screen": "~0.17.5",
+    "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
     "expo-web-browser": "~12.0.0",
@@ -44,7 +44,7 @@
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "jest": "^26.6.3",
-    "jest-expo": "~47.0.1",
+    "jest-expo": "^36.0.1",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.6.3"
   },
